SDKs/twilio.com/twilio_messaging_v1/1.39.1/go/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
go get github.com/speakeasy-api/openapi-directory/SDKs/twilio.com/twilio_messaging_v1/1.39.1/go
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```go
package main

import (
    "context"
    "log"
    "openapi"
    "openapi/pkg/models/shared"
    "openapi/pkg/models/operations"
)

func main() {
    s := sdk.New()

    req := operations.CreateAlphaSenderRequest{
        Security: operations.CreateAlphaSenderSecurity{
            AccountSidAuthToken: shared.SchemeAccountSidAuthToken{
                Password: "YOUR_PASSWORD_HERE",
                Username: "YOUR_USERNAME_HERE",
            },
        },
        PathParams: operations.CreateAlphaSenderPathParams{
            ServiceSid: "unde",
        },
        Request: &operations.CreateAlphaSenderCreateAlphaSenderRequest{
            AlphaSender: "deserunt",
        },
    }

    ctx := context.Background()
    res, err := s.CreateAlphaSender(ctx, req)
    if err != nil {
        log.Fatal(err)
    }

    if res.MessagingV1ServiceAlphaSender != nil {
        // handle response
    }
}
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### SDK SDK

* `CreateAlphaSender`
* `CreateBrandRegistrations`
* `CreateBrandVetting`
* `CreateExternalCampaign`
* `CreatePhoneNumber`
* `CreateService`
* `CreateShortCode`
* `CreateTollfreeVerification`
* `CreateUsAppToPerson`
* `DeleteAlphaSender`
* `DeleteDomainCertV4`
* `DeletePhoneNumber`
* `DeleteService`
* `DeleteShortCode`
* `DeleteUsAppToPerson`
* `FetchAlphaSender`
* `FetchBrandRegistrations`
* `FetchBrandVetting`
* `FetchDeactivation` - Fetch a list of all United States numbers that have been deactivated on a specific date.
* `FetchDomainCertV4`
* `FetchDomainConfig`
* `FetchPhoneNumber`
* `FetchService`
* `FetchShortCode`
* `FetchTollfreeVerification`
* `FetchUsAppToPerson`
* `FetchUsAppToPersonUsecase`
* `FetchUsecase`
* `ListAlphaSender`
* `ListBrandRegistrations`
* `ListBrandVetting`
* `ListPhoneNumber`
* `ListService`
* `ListShortCode`
* `ListTollfreeVerification`
* `ListUsAppToPerson`
* `UpdateBrandRegistrations`
* `UpdateDomainCertV4`
* `UpdateDomainConfig`
* `UpdateService`
* `UpdateTollfreeVerification`
<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
